support mvn exec:java and executable jar

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
     <groupId>code-of-gotham</groupId>
     <artifactId>code-of-gotham</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+	
+	<properties>
+			<exec.mainClass>com.canoo.cog.Main</exec.mainClass>
+	</properties>
+    
     <build>
         <plugins>
             <plugin>
@@ -42,6 +46,30 @@
                     </execution>
                 </executions> -->
             </plugin>
+            <plugin>
+		      <artifactId>maven-assembly-plugin</artifactId>
+		      <configuration>
+		         <finalName>${project.artifactId}</finalName>
+		        <archive>
+		          <manifest>
+		            <mainClass>${exec.mainClass}</mainClass>
+		          </manifest>
+		        </archive>
+		        <descriptorRefs>
+		          <descriptorRef>jar-with-dependencies</descriptorRef>
+		        </descriptorRefs>
+		        <appendAssemblyId>false</appendAssemblyId>
+		      </configuration>
+		      <executions>
+	          <execution>
+	            <id>make-assembly</id>
+	            <phase>package</phase>
+	            <goals>
+	              <goal>single</goal>
+	            </goals>
+	          </execution>
+	        </executions>
+		    </plugin>
         </plugins>
     </build>
 
